DevTools: fix network throttling when only latency is set

Bug: 778817
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_mojo
Change-Id: I132ebf5b4fc2b56d68cadf1adb1c06c83eaa2da0
Reviewed-on: https://chromium-review.googlesource.com/767749
Commit-Queue: Will Chen <chenwilliam@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Reviewed-by: Andrey Kosyakov <caseq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519441}
Former-commit-id: 104fdb77d5f5755006c47784dac744f3ac30cc74